<resources>
    <string name="app_name">Taller 1</string>
    <string name="number_guess_game">Number Guess Game!</string>
    <string name="try_to_guess_the_number_i_m_thinking_of_from_1_1000">Try to guess the number I´m thinking of, from 1-1000!</string>
    <string name="play_again">PLAY AGAIN</string>
    <string name="cualquier_numero">Cualquier Numero</string>
    <string name="write_a_number">Write a number</string>
    <string name="restart">Restart</string>
    <string name="number">Number</string>

</resources>